test_suite/tests/ui/enum-representation/internal-tuple-variant.stderr
error: #[serde(tag = "...")] cannot be used with tuple variants
 --> $DIR/internal-tuple-variant.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

